<resources>
    <string name="app_name">Vinyls_Jetpack_Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="collector_name_placeholder">Nombre del coleccionista</string>
    <string name="collector_email_placeholder">Correo del coleccionista</string>
    <string name="collector_phone_placeholder">Número telefónico</string>
    <string name="comment_rating_placeholder">##</string>
    <string name="comment_description_placeholder">Descripción del comentario</string>
    <string name="album_name_placeholder">Nombre del album</string>
    <string name="album_description_placeholder">Descripcion del album</string>
    <string name="txt_no_comments">No hay comentarios para este álbum</string>
    <string name="title_albums">Albums</string>
    <string name="title_collectors">Coleccionistas</string>
    <string name="title_comments">Comentarios del álbum</string>
    <string name="description_img_photo">Foto de album</string>
    <string name="description_artist_img_photo">Foto de artista</string>
    <string name="arg_id" translatable="false">key_id</string>
    <string name="dialog_delete_title">¿Delete store?</string>
    <string name="dialog_delete_confirm">Delete</string>
    <string name="dialog_delete_cancel">Cancel</string>
    <string name="dialog_options_title">¿What would you like to do?</string>
    <string name="description_store_add">Crear tienda</string>
    <string name="edit_store_title_edit">Editar tienda</string>
    <string name="edit_store_message_update_success">Tienda actualizada</string>
    <string name="edit_store_message_valid">Revise los campos requeridos.</string>
    <string name="edit_store_message_save_success">Tienda agregada correctamente.</string>
    <string name="edit_store_title_add">Crear tienda</string>
    <string name="hint_name">nombre de la tienda</string>
    <string name="hint_phone">teléfono</string>
    <string name="hint_website">url del sitio web</string>
    <string name="hint_photo_url">url de la imagen</string>
    <string name="helper_required">Requerido</string>
    <string name="menu_save">Save</string>
    <string name="main_error_no_website">Esta tienda no cuenta con un sitio web.</string>
    <string name="main_error_no_resolve">No se encontró ninguna app compatible</string>
    <string name="options_item_call">To call</string>
    <string name="options_item_website">Go to website</string>
    <string name="hint_album_title">Titulo del Album</string>
    <string name="hint_release_date">Release Date</string>
    <string name="hint_description">Descripcion del Album</string>
    <string name="hint_genre">Genre</string>
    <string name="hint_record">Record Label</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_no_album_detail">Album without details</string>
    <string name="title_album_details">Album Detail</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="Collectors">Collectors</string>
</resources>


